--- a/TrafficLawsTest/TrafficLawsTest.Security/TrafficLawsTest.Security.csproj
+++ b/TrafficLawsTest/TrafficLawsTest.Security/TrafficLawsTest.Security.csproj
@@ -37,6 +37,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=4.0.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.4.0.0-beta-0134\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -54,15 +57,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles.cs" />
     <Compile Include="SecurityManager.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Utils\IoC\ApplicationSecurityModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TrafficLawsTest.DataSource\TrafficLawsTest.DataSource.csproj">
       <Project>{A29994CC-9745-422C-8CBA-6713BF76D9D6}</Project>
       <Name>TrafficLawsTest.DataSource</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TrafficLawsTest.Logic\TrafficLawsTest.Logic.csproj">
-      <Project>{9AC9F2D0-F15D-4C65-9CAA-22C7ADA22508}</Project>
-      <Name>TrafficLawsTest.Logic</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
