--- a/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
+++ b/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageExtensions.cs" />
-    <Compile Include="Utils\IoC\ApplicationUIModule.cs" />
+    <Compile Include="Utils\IoC\UIModule.cs" />
     <Compile Include="Utils\IoC\DIFactory.cs" />
     <Compile Include="ViewModels\TestQuestionViewModel.cs" />
     <Compile Include="Views\About\AboutApplicationForm.cs">
