--- a/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
+++ b/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
@@ -81,6 +81,7 @@
       <DependentUpon>TestUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Presenters\EditTestPresenter.cs" />
+    <Compile Include="Presenters\StatisticPresenter.cs" />
     <Compile Include="Presenters\TestPresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Presenters\LoginPresenter.cs" />
@@ -92,6 +93,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResultForm.Designer.cs">
+      <DependentUpon>ResultForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\ImageExtensions.cs" />
     <Compile Include="Utils\IoC\UIModule.cs" />
     <Compile Include="Utils\IoC\DIFactory.cs" />
@@ -139,6 +146,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ResultForm.resx">
+      <DependentUpon>ResultForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\About\AboutApplicationForm.resx">
       <DependentUpon>AboutApplicationForm.cs</DependentUpon>
     </EmbeddedResource>
