--- a/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
+++ b/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
@@ -93,10 +93,22 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultForm.cs">
+    <Compile Include="Views\About\AboutAuthorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ResultForm.Designer.cs">
+    <Compile Include="Views\About\AboutAuthorForm.Designer.cs">
+      <DependentUpon>AboutAuthorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\About\AboutApplicationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\About\AboutApplicationForm.Designer.cs">
+      <DependentUpon>AboutApplicationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ResultForm.Designer.cs">
       <DependentUpon>ResultForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils\ImageExtensions.cs" />
@@ -104,11 +116,11 @@
     <Compile Include="Utils\IoC\DIFactory.cs" />
     <Compile Include="ViewModels\TestViewModel.cs" />
     <Compile Include="ViewModels\TestQuestionViewModel.cs" />
-    <Compile Include="Views\About\AboutApplicationForm.cs">
+    <Compile Include="Views\About\AboutPointSystemForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\About\AboutApplicationForm.Designer.cs">
-      <DependentUpon>AboutApplicationForm.cs</DependentUpon>
+    <Compile Include="Views\About\AboutPointSystemForm.Designer.cs">
+      <DependentUpon>AboutPointSystemForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\About\AboutTrafficLawsForm.cs">
       <SubType>Form</SubType>
@@ -145,12 +157,19 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ResultForm.resx">
-      <DependentUpon>ResultForm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\About\AboutAuthorForm.resx">
+      <DependentUpon>AboutAuthorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\About\AboutApplicationForm.resx">
       <DependentUpon>AboutApplicationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ResultForm.resx">
+      <DependentUpon>ResultForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\About\AboutPointSystemForm.resx">
+      <DependentUpon>AboutPointSystemForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\About\AboutTrafficLawsForm.resx">
       <DependentUpon>AboutTrafficLawsForm.cs</DependentUpon>
@@ -185,6 +204,12 @@
       <Project>{60D29C80-174F-4B13-801C-C5A24DAED864}</Project>
       <Name>TrafficLawsTest.Security</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Images\logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\Images\theme.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
