--- a/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
+++ b/TrafficLawsTest/TrafficLawsTest/TrafficLawsTest.csproj
@@ -93,12 +93,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\About\AboutAuthorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\About\AboutAuthorForm.Designer.cs">
-      <DependentUpon>AboutAuthorForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Views\About\AboutApplicationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,9 +153,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Views\About\AboutAuthorForm.resx">
-      <DependentUpon>AboutAuthorForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\About\AboutApplicationForm.resx">
       <DependentUpon>AboutApplicationForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -206,6 +197,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\ExternalUsers\users_data.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Images\logo.jpg" />
   </ItemGroup>
   <ItemGroup>
